# train_ai_play_minsweeper

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  clear.sh  vcpkg.json
data_collector/: CMakeLists.txt
data_collector/models/: label.h
data_collector/src/: main.cpp  qml.qrc
data_collector/src/data_collector/views/: main.qml  remote_view.qml
data_collector/src/viewmodels/: remote_viewmodel.cpp  remote_viewmodel.h
docker/: .gitconfig  .vimrc  Dockfile.u2004  build.sh  runDocker.bat  runDocker.sh
docker/.config/dconf/: user
docker/.config/ibus/bus/: ce71df3fdb4140d0965028e3a1933bff-hbb-de-MacBookPro.local-0  ec6b232b266a4d12a23eaea1dc578100-hbbdeMacBookPro.lan-0  f78f01e3c04d413fbe38d40687e9e0a6-hbbdeMacBookPro.lan-0
docker/.config/ibus/rime/: installation.yaml  user.yaml
docker/.config/ibus/rime/luna_pinyin.userdb/: 000022.ldb  LOG  LOG.old  MANIFEST-000029
docker/.config/ibus/rime/wubi86.userdb/: 000022.ldb  LOG  LOG.old  MANIFEST-000023
pyscripts/: epo999_acc0.9998model.pt  infer.py  mines_model.py  model_scripted.pt  train.py
rl_gameAgent/: CMakeLists.txt
rl_gameAgent/models/: label.h
rl_gameAgent/src/: main.cpp  qml.qrc  qtquickcontrols2.conf
rl_gameAgent/src/rl_gameAgent/views/: main.qml  remote_view.qml
rl_gameAgent/src/viewmodels/: remote_viewmodel.cpp  remote_viewmodel.h
